2003-04-05  Bruno Haible  <bruno@clisp.org>

	* relocatable.m4 (AC_RELOCATABLE_LIBRARY): Use the final value of
	${prefix}, not the current value.

2003-03-18  Bruno Haible  <bruno@clisp.org>

	* onceonly.m4: Update from gnulib.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	Support for relocatable installation.
	* canonicalize.m4: New file.
	* relocatable.m4: New file.
	* strerror.m4: New file.
	* xreadlink.m4: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	* pathmax.m4: New file, from gnulib.
	* Makefile.am (EXTRA_DIST): Add it.

2003-02-22  Bruno Haible  <bruno@clisp.org>

	* flex.m4 (gt_PROG_LEX): Remove LEX_OUTPUT_ROOT setting, not needed
	any more with automake-1.7.2.

2003-02-19  Bruno Haible  <bruno@clisp.org>

	* stdbool.m4 (gt_STDBOOL_H): Also test for usability of 'bool' in
	declarations. Needed for HP-UX 11 cc.

2003-02-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.am: Update for new directory structure.
	(EXTRA_DIST): Add ChangeLog.0.


See ChangeLog.0 for earlier changes.