@@ -1,5 +1,5 @@
-# error.m4 serial 1 (gettext-0.11)
-dnl Copyright (C) 2002 Free Software Foundation, Inc.
+# error.m4 serial 2 (gettext-0.12)
+dnl Copyright (C) 2002-2003 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -17,5 +17,17 @@ AC_DEFUN([gt_FUNC_ERROR_AT_LINE],
   if test $am_cv_lib_error_at_line = yes; then
     AC_DEFINE(HAVE_ERROR_AT_LINE, 1,
       [Define to 1 if you have the functions error() and error_at_line().])
+  else
+    jm_PREREQ_ERROR
   fi
+])
+
+# Prerequisites of lib/error.c.
+AC_DEFUN([jm_PREREQ_ERROR],
+[
+  AC_REQUIRE([AC_HEADER_STDC])
+  AC_CHECK_FUNCS_ONCE(doprnt vprintf)
+  AC_CHECK_FUNCS(strerror)
+  AC_CHECK_DECLS([strerror])
+  AC_FUNC_STRERROR_R
 ])
